force-app/main/default/objects/Course_Assignment__c/Course_Assignment__c.object-meta.xml
<CustomObject>
    <label>Course Assignment</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Course Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>