force-app/main/default/objects/Course_Assignment__c/fields/Course_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_Description__c</fullName>
    <formula>Course__r.Course_SIS_Section_SIS_Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Description</label>
    <type>Text</type>
</CustomField>