force-app/main/default/objects/Course_Assignment__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>Course__r.Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula-CourseName</label>
    <type>Text</type>
</CustomField>