force-app/main/default/objects/Course_Assignment__c/fields/Section_SIS__c.field-meta.xml
<CustomField>
    <fullName>Section_SIS__c</fullName>
    <formula>Course__r.Section_SIS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula-Section-SIS</label>
    <type>Text</type>
</CustomField>