force-app/main/default/objects/Course_Assignment__c/fields/Term_SIS__c.field-meta.xml
<CustomField>
    <fullName>Term_SIS__c</fullName>
    <formula>Course__r.Term_SIS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Term-SIS</label>
    <type>Text</type>
</CustomField>