force-app/main/default/objects/Course_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Description__c</columns>
    <columns>Assigned_Date__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>