force-app/main/default/objects/Course_Assignment__c/listViews/Status_List_View.listView-meta.xml
<ListView>
    <fullName>Status_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Replaced</value>
    </filters>
    <label>Status List View</label>
</ListView>